vitrail-pg-macros/tests/ui/fail/insert_input_missing_required_field.stderr
error: missing required field `email` in insert input for model `user`
  --> tests/ui/fail/insert_input_missing_required_field.rs:3:1
   |
 3 | / schema! {
 4 | |     name insert_schema
 5 | |
 6 | |     model user {
...  |
11 | | }
   | |_^
12 |
13 |   #[derive(InsertInput)]
   |            ----------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_scan_insert_input_field_insert_schema_user_email` which comes from the expansion of the derive macro `InsertInput` (in Nightly builds, run with -Z macro-backtrace for more info)
